# alignment

./: README.md  pyproject.toml  setup.py
alignment/: __init__.py  __main__.py  calibrationsquare.py  calibrationsquareobservation.py  camera.py  helper.py  photo.py
jupyter/: Demo Moving Squares Inheritance Version.ipynb  Demo Moving Squares.ipynb  Demo Stationary Squares Inheritance Version.ipynb  Demo Stationary Squares.ipynb
jupyter/demo_multitag1/: photo_object_02G14695548_20240418_22:31:02.947355_cald_0023.np  photo_object_02G14695548_20240418_22:31:07.957067_cald_0024.np  photo_object_02G14695548_20240418_22:31:12.966758_cald_0025.np  photo_object_02G14695548_20240418_22:31:17.976398_cald_0026.np  photo_object_02G14695548_20240418_22:31:22.984856_cald_0027.np  photo_object_02G14695548_20240418_22:31:36.775895_cald_0028.np  photo_object_02G14695548_20240418_22:31:55.137278_cald_0029.np  photo_object_02G14695548_20240418_22:32:11.046198_cald_0030.np
jupyter/demo_multitag2/: photo_object_02G14695548_20240422_07:08:36.145873_calf_0000.np  photo_object_02G14695548_20240422_07:08:42.157544_calf_0001.np  photo_object_02G14695548_20240422_07:08:48.167744_calf_0002.np  photo_object_02G14695548_20240422_07:08:54.177978_calf_0003.np  photo_object_02G14695548_20240422_07:09:00.188121_calf_0004.np  photo_object_02G14695548_20240422_07:09:06.198306_calf_0005.np  photo_object_02G14695548_20240422_07:09:12.208457_calf_0006.np  photo_object_02G14695548_20240422_07:09:18.218949_calf_0007.np  photo_object_02G14695548_20240422_07:09:24.229299_calf_0008.np  (+3 more)
(+34 files in other folders)
